@@ -1,3 +1,6 @@
+2016-08-04  Kirit Saelensminde  <kirit@felspar.com>
+ Ensure that the lengths match before comparing the data in `crypto_compare`.
+
 2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
  * Added initial support for minting and checking JWT.
  * Extra information for the `not_implemented` constructor can now be anything coercible to JSON. Also remove the exception from the `fost/core` header.
